--- a/login/style/style.css
+++ b/login/style/style.css
@@ -22,6 +22,7 @@
 }
 input{
     all:unset;
+    color: rgba(0, 0, 0, 0.171);
 }
 body, html{
     height: 100%;
@@ -53,7 +54,7 @@ body{
 .contactTutorialAndSupport{
     width: 100%;
     height: 90%;
-    background-image: url("img/guysketch.png");
+    background-image: url("img/guysketch2.png");
     background-size: cover;
     background-position-x: 4vw;
     background-repeat: no-repeat;
@@ -315,4 +316,59 @@ body{
     display: flex;
     align-items: flex-end;
     padding-bottom: 3%;
+}
+.pong{
+    display: none;
+    background-color: #e4af4d;
+    border-radius: 50%;
+    position: absolute;
+}
+#pong{   
+    width: 1.4vw;
+    height: 1.4vw;   
+    left:21vw;
+    top: 58vh;
+}
+#pong2{
+    width: 0.8vw;
+    height: 0.8vw;
+    left:25.4vw;
+    top: 13vh;
+}
+#pong3{
+    width: 1.2vw;
+    height: 1.2vw;
+    left:58vw;
+    top: 10vh;
+}
+#handguy{
+    position: absolute;
+    width: 15vw;
+    height: 30vh;
+    left: 20.2vw;
+    top: 18vh;
+    background-image: url("img/handguy.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    /* background-color: #caccce; */
+}
+#dotguy{
+    position: absolute;
+    width: 3.5vw;
+    height: 3.5vh;
+    background-image: url("img/guydot.png");
+    background-size: 3.5vw 100%;
+    top: 17.75vh;
+    left: 22.2vw;
+}
+#closea{
+    display: none; 
+    position: absolute; 
+    z-index:3;
+    width: 2vw;
+    height: 2vw;
+    background-color: aqua;
+    top: 29vh;
+    left: 60vw;
+    cursor: pointer;
 }
