--- a/app/style/ChangePasswordStyle.css
+++ b/app/style/ChangePasswordStyle.css
@@ -22,13 +22,15 @@
 }
 body{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgb(255, 255, 255);
     background-image: url("img/background2.jpg");
     background-size: 95% 70vw;
     background-position-y: -10vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    gap: 1vh;
     align-items: center;
     font-family: Roboto-Regular;
 }
