--- a/public_html/app/style/style.css
+++ b/public_html/app/style/style.css
@@ -181,26 +181,33 @@ input{
     background-color: white;
     width: 100%;
     height: 100vh;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
     align-items: center;
 }
-
+.calendarMode #nameOfMonth {
+    margin-bottom: 0vh;
+    margin-top: 2vh;
+    font-size: 2vw;
+    font-family: Roboto-Regular;
+}
 .mainCalendar{
     display: flex;
     flex-wrap:wrap;
     width: 95%;
-    height: 70%;
+    height: 82%;
     /* margin-left: 2vw; */
 }
 .dayOfTheWeek{
     background-color: #fff;
     width: 9vw;
     height: 13vh;
-    outline: 0.15vw solid #969696;
+    outline: 0.10vw solid #c2c2c2;
+    box-sizing: border-box;
+    padding: 0.1vw;
 }
 .outDay{
-    background-color: #cacaca;
+    background-color: #efefef;
 
 }
 .nameDayOfTheWeek
@@ -209,7 +216,8 @@ input{
     justify-content: flex-start;
     align-items: flex-end;
     height: 5%;
-    /* outline-color: white; */
+    outline-color: white;
+    font-weight: bold;
     
 }
 .printCalendar{
