--- a/public_html/app/style/style.css
+++ b/public_html/app/style/style.css
@@ -95,7 +95,7 @@ input{
 /* CENTER PANEL */
 .centerPanel
 {
-    background-color: azure;
+    background-color: #ffffff;
     height: 100%;
     width: 67%;
 }
