--- a/public_html/app/style/style.css
+++ b/public_html/app/style/style.css
@@ -1,3 +1,20 @@
+@media print
+{    @page {
+        size: landscape
+    }
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+    .mainCalendar
+    {
+        width: 100%;
+    }
+    .dayOfTheWeek
+    {
+        width: 14vw;
+    }
+}
 @font-face {
     font-family: Roboto-Bold;
     src: url("fonts/Roboto-Bold.ttf");
@@ -215,10 +232,19 @@ input{
     font-weight: bold;
     
 }
-.printCalendar{
+.calendarButtons
+{
     align-self: flex-end;
     margin-right: 2vw;
     color: white;
+    display: flex;
+    gap: 1vw;
+}
+.printCalendar{
+    
+}
+.saveCalendar{
+
 }
 #working
 {
@@ -255,12 +281,12 @@ select{
     display: flex;
     flex-direction: column;
     width: 22vw;
-    height: 10vh;
+    height: 8vh;
     padding: 0;
     position:absolute;
     top: 80vh;
     left: 3vw;
-    font-size: 1vw;
+    font-size: 0.8vw;
     border-radius: 1vw;
     padding-bottom: 1vh;
     background-color: rgba(255, 255, 255, 0.813);
@@ -273,13 +299,13 @@ select{
     align-items: center;
     margin: 0;
    
-    padding: 1vw;
+    padding: 0.7vw;
     border-radius: 1vw;
 }
 #toast #toastLost
 {
     width:20vw;
-    height: 2vw;
+    height: 0.8vw;
     background-color: #f9e616;
     border-radius: 1vw;
     margin-left: 1vw;
