--- a/public_html/app/style/style.css
+++ b/public_html/app/style/style.css
@@ -240,12 +240,12 @@ input{
     display: flex;
     gap: 1vw;
 }
-.printCalendar{
+/* .printCalendar{
     
 }
 .saveCalendar{
 
-}
+} */
 #working
 {
     display: flex;
