--- a/public_html/app/style/calendarModeAdditionalStyles.css
+++ b/public_html/app/style/calendarModeAdditionalStyles.css
@@ -226,6 +226,105 @@
     background-color: yellow;
     width:0;
 }
+/* Right Panel */
+
+.rightPanel
+{
+    background-image: url("img/panelRight.png");
+    height: 100%;
+    width: 18%;
+    font-size: 1vw;
+    background-size: cover;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5vw;
+}
+.filtersForCalendar
+{
+    border-radius: 0.5vw;
+    background-color: #ffffffa3;
+    box-sizing: border-box;
+    padding: 0.5vw;
+    margin-bottom: 2vh;
+}
+.header-cal-right
+{
+    margin-bottom: 1vh;
+}
+.calendarFilterSelect
+{
+    all: unset;
+    font-size: 0.8vw;
+    background-color: white;
+    width: 100%;
+    text-transform: capitalize;
+    height: 4vh;
+    box-sizing: border-box;
+    padding-left: 10%;
+    border-radius: 0.5vw;
+
+    margin-bottom: 1vh;
+}
+
+.SelectUserForStatistics
+{
+    border-radius: 0.5vw;
+    width: 100%;
+    height: 20vh;
+    background-color: #ffffffa3;
+    display: block;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 0.5vw;
+}
+
+.UserToSelect
+{
+
+    width: 100%;
+    height: 7vh;
+    background-color: white;
+    display: flex;
+    gap: 1vw;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.5vw;
+    margin-bottom: 0.8vh;
+}
+
+.UserToSelectAvatar
+{
+    width: 2vw;
+    height: 2vw;
+    background-size: cover;
+}
+.UserToSelect_SurnameAndName
+{
+    font-size: 0.8vw;
+    font-weight: bold;
+}
+.UserToSelect_OtherInfo
+{
+    font-size: 0.6vw;
+}
+.UserToSelect_button
+{
+    color: #fff;
+    background-color: #0A85ED;
+    font-size: 0.7vw;
+    text-transform: uppercase;
+    padding: 0.4vw;
+    border-radius: 0.5vw;
+    cursor: pointer;
+}
+.UserToSelect_button:hover
+{
+    background-color: #0865b1;
+}
+/* additional */
 @media print
 {    @page {
         size: landscape
