--- a/public_html/app/style/calendarModeAdditionalStyles.css
+++ b/public_html/app/style/calendarModeAdditionalStyles.css
@@ -324,6 +324,122 @@
 {
     background-color: #0865b1;
 }
+
+/* Statistic */
+.StatisticForUser
+{
+    border-radius: 0.5vw;
+    margin-top: 2vh;
+    width: 100%;
+    background-color: white;
+    height: 55vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 1vw;
+}
+.StatisticAvatar
+{
+    width: 5vw;
+    height: 5vw;
+    background-size: cover;
+}
+.StatisticUserDescription
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.StatisticUserNameAndSurname
+{
+    font-size: 1vw;
+    font-weight: bold;
+}
+.UserIdentyficators
+{
+    font-size: 0.8vw;
+    color: #777575;
+}
+.StatisticShiftsForUser
+{
+    /* background-color: #63cb55; */
+    width: 15vw;
+    padding: 0.5vw;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.StatisticFlagForShift
+{
+    width: 1vw;
+    height:0.5vw;
+    border-radius: 0.2vw;
+    margin-right: 0.2vw;
+}
+.StatisticNameOfShift
+{
+    font-size: 0.7vw;
+}
+/* graph */
+.StatisticGraph{
+    width: 8vw;
+    height: 8vw;
+    border-radius: 50%;
+    background-color: #565656;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: repeating-conic-gradient(
+        from 0deg,
+        #0865b1 0deg 50deg,
+        #63cb55 50deg 70deg,
+        #c0c0c0 70deg 360deg
+    );
+}
+.StatisticGraph_mask{
+    width: 5vw;
+    height: 5vw;
+    background-color: #fff;
+    position: flex;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.StatisticLeftHours_name
+{
+    font-size: 0.8vw;
+}
+.StatisticLeftHours
+{
+    font-size: 1.2vw;
+    font-weight: bold;
+}
+
+.StatisticCalendar
+{
+    margin-top: 2vh;
+    width: 100%;
+    height: 20vh;
+    /* //background-color: #0865b1; */
+    font-size: 0.8vw;
+}
+.StatisticCalendar table
+{
+    width:100%;
+    border-spacing: 0.1vw;
+}
+.StatisticCalendar td{
+    text-align: center;
+    border-radius: 1vw;
+    padding: 0.1vw;
+
+}
+
 /* additional */
 @media print
 {    @page {
