--- a/public_html/app/style/style.css
+++ b/public_html/app/style/style.css
@@ -278,42 +278,10 @@ input{
 select{
     width: 100%;
 }
-#toast
+#addDepartmentModule
 {
-    color: black;
-    /* background-color: rgba(255, 255, 255, 0.131); */
-    box-shadow: 0 0 1vw #212529;
-    display: flex;
-    flex-direction: column;
-    width: 22vw;
-    height: 10vh;
-    padding: 0;
-    position:absolute;
-    top: 80vh;
-    left: 3vw;
-    font-size: 0.8vw;
-    border-radius: 1vw;
-    padding-bottom: 1vh;
-    background-color: rgba(255, 255, 255, 0.813);
+    display: none;
 }
-#toast #toastBody
-{
-    display: flex;
-    gap: 1vw;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-   
-    padding: 0.7vw;
-    border-radius: 1vw;
-}
-#toast #toastLost
-{
-    width:20vw;
-    height: 0.8vw;
-    background-color: #f9e616;
-    border-radius: 1vw;
-    margin-left: 1vw;
-}
+
 
 
