--- a/public_html/app/style/style_CalendarModule.css
+++ b/public_html/app/style/style_CalendarModule.css
@@ -1,3 +1,94 @@
+/* Calendar */
+.calendarMode{
+    font-size: 0.8vw;
+    display: flex;
+    /* display: none; */
+    background-color: white;
+    width: 100%;
+    height: 100vh;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+}
+.calendarMode #nameOfMonth {
+    margin-bottom: 0vh;
+    margin-top: 2vh;
+    font-size: 2vw;
+    font-family: Roboto-Regular;
+}
+.mainCalendar{
+    display: flex;
+    flex-wrap:wrap;
+    width: 95%;
+    height: 82%;
+    /* margin-left: 2vw; */
+}
+.dayOfTheWeek{
+    background-color: #fff;
+    width: 9vw;
+    height: 13vh;
+    outline: 0.10vw solid #c2c2c2;
+    box-sizing: border-box;
+    padding: 0.1vw;
+}
+.outDay{
+    background-color: #efefef;
+
+}
+.nameDayOfTheWeek
+{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    height: 5%;
+    outline-color: white;
+    font-weight: bold;
+    
+}
+.calendarButtons
+{
+    align-self: flex-end;
+    margin-right: 2vw;
+    color: white;
+    display: flex;
+    gap: 1vw;
+}
+/* .printCalendar{
+    
+}
+.saveCalendar{
+
+} */
+#working
+{
+    display: flex;
+    gap: 0.2vw;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+}
+.userW
+{
+    background-color: rgb(202, 216, 243);
+    padding: 0.1vw;
+    border: solid 0.1vw cornflowerblue;
+    border-radius: 0.1vw;
+}
+#vacation
+{
+    display: flex;
+    gap: 0.1vw;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+}
+.userV
+{
+    background-color: rgb(183, 188, 197);
+    padding: 0.1vw;
+    border: solid 0.1vw rgb(42, 53, 75);
+    border-radius: 0.1vw;
+}
 .dayOfTheWeek
 {
     overflow-y: auto;
