--- a/public_html/app/style/style.css
+++ b/public_html/app/style/style.css
@@ -30,6 +30,8 @@ body{
     height: 100vh;
     display: flex;
     background-color: rgb(190, 190, 190);
+    overflow: hidden;
+
     font-family: Roboto-Regular;
 }
 input{
