repair add user / remove user / add avatars

--- a/public_html/app/style/style.css
+++ b/public_html/app/style/style.css
@@ -128,6 +128,20 @@ select{
 {
     display: none;
 }
-
-
+#licenceImages
+{
+    color: #ffffff;
+    font-size: 0.8vw;
+    position:absolute;
+    top: 95vh;
+    left: 1vw;
+}
+#licences
+{
+    color: #ffffff;
+    font-size: 0.8vw;
+    position:absolute;
+    top: 92vh;
+    left: 1vw;
+}
 
