--- a/public_html/app/style/style_CalendarModule.css
+++ b/public_html/app/style/style_CalendarModule.css
@@ -396,6 +396,7 @@
     width: 2vw;
     height: 2vw;
     background-size: cover;
+    border-radius: 50%;
 }
 .UserToSelect_SurnameAndName
 {
@@ -440,6 +441,7 @@
     width: 5vw;
     height: 5vw;
     background-size: cover;
+    border-radius: 50%;
 }
 .StatisticUserDescription
 {
